# qikcikBlog

./: .gitignore  CMakeLists.txt  http_server.c  http_server.h  main.c  ownedStr.c  ownedStr.h  staticFile.c  staticFile.h  tcp_server.c  tcp_server.h
content/: common.lua  entry.lua  index.html  main.lua  webiste.md
content/posts/: chip8EmulatorAssemblerGameVhdl.md  chip8EmulatorAssemblerVhdl.md  iAmTerribleAtMath.md  media.md  myAttemptToImplementMinimalisticFlexboxLayout.md  myGoogleRecrutmentJourneyPart1.md  projects.md  relearningHowToWriteFrom3FingersTo10.md
content/public/: style.css
content/quickNotes/: helloWorld.md  writingHttpServerAndBlogInCAndLua.md
content/template/: about.html  articles.html  main.html  note.html  notes.html  quickNotes.html
data/: main.lua
source/: main.c  ownedStr.c  ownedStr.h  staticFile.c  staticFile.h  tcp_server.c  tcp_server_win32.c
